# TCSS456

./: .gitignore  README.md  dev-app-update.yml  electron-builder.yml  eval_dataset.json  forge.config.ts  index.html  my_dataset.json  package-lock.json  package.json  pyproject.toml  setup.sh  tsconfig.json  vite.config.js
app/: ChatBotLogic.py  Serve.py  finetune_gemma_1bgguf.ipynb  index.py
src/: App.tsx  db.ts  main.ts  main.tsx  renderer.ts  utils.ts
src/assets/: base.css  chiikawa.icns  main.css
src/components/: types.ts
src/components/Avatar/: Robot.tsx
src/components/bar/: Conversation.tsx  Sidebar.tsx
src/components/chat/: Input.tsx  Message.tsx  UserChat.tsx
src/components/sidebar/: Chat.tsx  Conversation.tsx
src/renderer/: index.html
src/renderer/src/: App.tsx
src/renderer/src/assets/: base.css  main.css
